Removed duplicate button, fixed some css issues with overflow and flex-shrink

--- a/src/app/components/homePage/shared/time-selector.less
+++ b/src/app/components/homePage/shared/time-selector.less
@@ -1,7 +1,7 @@
 #timeSubmit {
   display: flex;
   justify-content: center;
-  margin-top: 40px;
+  margin: 40px;
   font-size: 2em;
 }
 
